Bug 122164 - Mail Merge wizard is silently not shown when Base is not installed
Summary: Mail Merge wizard is silently not shown when Base is not installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-18 05:10 UTC by Mike Kaganski
Modified: 2024-07-15 07:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-12-18 05:10:34 UTC
https://ask.libreoffice.org/en/question/176575/mailmerge-wizard-doesnt-show-6132/

> Start LibreOffice Writer and it shows Untitled 1 empty document.
> Select Tools -> Mail Merge Wizard...
> Nothing happens. No Wizard. Nothing.
> ...
> It seems the default OpenSuse install includes all of LibreOffice - except Base.

So the proposal is to show an informational message in this case.
Comment 1 Mike Kaganski 2018-12-18 05:16:02 UTC
https://gerrit.libreoffice.org/65302
Comment 2 Commit Notification 2018-12-18 07:03:24 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/6dc36d343aeacb3d1e14ec0c847937d63f4e68a7%5E%21

tdf#122164: inform user that Base is needed for MailMerge

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Timur 2022-04-28 09:22:16 UTC
Good this is done. But it's not just Base, but Java also. 
https://askubuntu.com/questions/1122170/for-mail-merge-to-work-properly-libreoffice-must-be-restarted
Comment 4 Mike Kaganski 2022-04-28 09:27:25 UTC
(In reply to Timur from comment #3)
> Good this is done. But it's not just Base, but Java also. 

This is different. It's not a *LibreOffice* component missing: all our components are present. Here is some dependency is missing, and that makes the present component non-functional. Completely different issue, requiring own ticket.