tdf#122164: inform user that Base is needed for MailMerge

Change-Id: Id62a2e4cd2d8d8b6aa79e43448513a9791a55d91
Reviewed-on: https://gerrit.libreoffice.org/65302
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>